fix method not found